--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build"
+    "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -34,6 +36,7 @@
     "@types/react": "^17.0.41",
     "@types/react-dom": "^17.0.14",
     "tslint": "^6.1.3",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.2",
+    "gh-pages": "^6.0.0"
   }
 }
