--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "caesar-encoder",
   "version": "0.1.0",
   "private": false,
+  "homepage": "https://kate-ka.github.io/caesar-encoder/",
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
